# pclouds

./: .RData  .Rhistory  .cproject  .gitignore  .gitmodules  .project  .travis.yml  25.correct_out  Annotate.pm  CMakeLists.txt  Controlfile  Controlfile_  Controlfile_new_example  Controlfile_old  Controlfile_real  Controlfile_test  GenomeScanAndIdentify  GenomeScanAndIdentify1  Jaime's Making Clouds algorithm.odt  MakeClouds_PCloudsMethod.pm  Makefile  Makefile_old  PCloud_man.doc  PClouds.cpp  PClouds.d  PClouds.gcda  PClouds.gcno  PClouds_edges_out_without_sorting  Pclouds  Pclouds.out  Pclouds.outDoesNotRunOnUbuntu  Pclouds_STP.exe.REMOVED.git-id  README.md  annotate_genome.cpp  build_clouds.cpp  build_clouds_recursively.cpp  build_new.cpp  build_old.cpp  cloud.summaries  cloudmer_counts  (+111 more)
cloudPos_1.6/: RunRecord.txt  cloudPos.pl  control  default  factory  globals.pm  kClouds.pm  log  seqTools.pm  test.fa
cloudPos_1.6/ANNOTATE/: test_annotate.fasta
cloudPos_1.6/CLOUDS/: fam_A_test.assign  test_clouds_export.assign  test_clouds_import.assign
cloudPos_1.6/RESULTS/: test_results.bed  test_results_reference.bed
cloudbuilder/: CMakeLists.txt  build_clouds.cpp  build_clouds.hpp  build_clouds_recursively.cpp  test.cpp  test_build_clouds.cpp  utilities.hpp
cmake/: PCLOUDSConfig.cmake  PCLOUDSPackageExport.cmake  PCLOUDSPackageOptions.cmake
dinucsim/: Makefile  dinucSim.cpp  dinucSim.d
documents/: MakeClouds-JaimesMethod.pl  P-clouds Making Clouds algorithm.odt  PClouds vocabulary update.docx
etc/: count_cloudmers3.pl
filereader/: CMakeLists.txt  readfile.cpp  readfile.h
genomeannotator/: CMakeLists.txt  annotate_genome.cpp
include/: annotate.hpp
microsat_hack/: Pclouds.out  clouds.d  counts.c  directmethod.d  genomepro.c  macrodefine.h  mixedmethod01.d  mixedmethod02.c  readfile.h  stringhandle.c
old/: Makefile  Pclouds  clouds.c  clouds.d  clouds.h  counts.c  counts.d  counts.h  directmethod.c  directmethod.d  directmethod.h  genomehandle.c  genomehandle.d  genomepro.c  genomepro.d  macrodefine.h  mixedmethod01.c  mixedmethod01.d  mixedmethod02.c  mixedmethod02.d  overlapmethod.c  overlapmethod.d  readfile.c  readfile.d  readfile.h  stringhandle.c  stringhandle.d
pclouds/: pclouds.cpp  pclouds.hpp
postprocessor/: Makefile  postprocessor  postprocessor-old.d
preprocessor/: Makefile  preprocessor.cpp
processors/: CMakeLists.txt  Makefile  clouds_copy.c  dinucSim_cc_0.7_1Jan2014.cpp  postprocessor-old.cpp  postprocessor.cpp  postprocessor.d  postprocessorcompare  preprocessor.cpp  preprocessor.d
runSample/: Controlfile
scripts/: count_cloudmers.pl  count_cloudmers2.pl  count_cloudmers3.pl  count_cloudmers_wrapper.pl  filter_cloudmers.pl
source/: annotate.cpp
src/: build_clouds.cpp  count_cloudmers_wrapper.pl  filter_cloudmers.pl  readfile.cpp  stringhandle.cpp
src/processors/: dinucSim_cc_0.7_1Jan2014.cpp
stringhandler/: CMakeLists.txt  stringhandle.cpp  stringhandle.h
